# lease-builder

./: .env-template  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/versions/: 5492265ba3ba_add_templates_table.py  92f2666b5619_fix_templates_table.py  953d41c851d0_add_users_table.py
app/routes/: deps.py  template_routes.py  user_routes.py
app/schemas/: document.py  document_info.py  template.py
app/test/: conftest.py
app/test/routes/: test_template_routes.py  test_user_routes.py
app/test/schemas/: test_document_info_schema.py  test_document_schema.py  test_template_schema.py  test_user_schema.py
app/test/use_cases/: test_template_use_cases.py  test_user_use_cases.py
app/use_cases/: document.py  template.py  user.py
