[tool.poetry]
name = "lease-builder"
version = "0.1.0"
description = ""
authors = ["David Ambrozio <davidambroziodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
python-decouple = "^3.8"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.25.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"